cmake_minimum_required(VERSION 3.29)
project(battle_ssafy)

set(CMAKE_CXX_STANDARD 14)

add_executable(SEOUL21_PARKJIN SEOUL21_PARKJIN.cpp bridge.cpp)
add_executable(SEOUL21_KIMBYUNGJI SEOUL21_KIMBYUNGJI.cpp bridge.cpp)
add_executable(SEOUL21_LEESUNYONG SEOUL21_LEESUNYONG.cpp bridge.cpp)
add_executable(SEOUL21_LEESUNYONG2 SEOUL21_LEESUNYONG2.cpp bridge.cpp)